Add uglification (minification) and source maps
Note that source maps are only produced on non-release browser builds.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "style-loader": "^0.13.0",
     "ts-loader": "^0.7.2",
     "typescript": "^1.7.3",
+    "uglify-js": "^2.6.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
