--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "ionic-sdk": "^1.2.0",
+    "ionic-angular": "^1.3.1",
     "ng-cordova": "^0.1.23-alpha"
   },
   "cordovaPlugins": [
